k8s/argocd/02_ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-frontend
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.keindev.ru`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: local-keindev-ru-tls
